src/objects/Apex_Defaults__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds settings that may need to be adjusted or added to frequently (like a list of profiles or subjects).</description>
    <fields>
        <fullName>Admin_Support_Supervisor__c</fullName>
        <label>Admin Support Supervisor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP_Director__c</fullName>
        <label>CEP Director</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Liaison_Staff__c</fullName>
        <label>Education Liaison Staff</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Liaison_Supervisor__c</fullName>
        <label>Education Liaison Supervisor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Supervisor__c</fullName>
        <label>Employment Supervisor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profiles_Authorized_to_Manage_Classes_2__c</fullName>
        <label>Profiles Authorized to Manage Classes 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profiles_Authorized_to_Manage_Classes_3__c</fullName>
        <label>Profiles Authorized to Manage Classes 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profiles_Authorized_to_Manage_Classes__c</fullName>
        <label>Profiles Authorized to Manage Classes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rearrest_Check_Owner_ACT__c</fullName>
        <label>Rearrest Check Owner (ACT)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rearrest_Check_Owner_CCM__c</fullName>
        <label>Rearrest Check Owner (CCM)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rearrest_Check_Owner_CEP__c</fullName>
        <label>Rearrest Check Owner (CEP)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rearrest_Check_Owner_CRT__c</fullName>
        <label>Rearrest Check Owner (CRT)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rearrest_Check_Owner_DTC__c</fullName>
        <label>Rearrest Check Owner (DTC)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Supervisor__c</fullName>
        <label>Substance Abuse Supervisor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users_Authorized_to_Reassign_MH_Tasks__c</fullName>
        <label>Users Authorized to Reassign MH Tasks</label>
        <type>TextArea</type>
    </fields>
    <label>Apex Defaults</label>
</CustomObject>